--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>[Park Name]</title>
+    <title>Yellowstone</title>
     <link rel="stylesheet" href="css/style.css" />
     <script type="module" src="js/main.js"></script>
   </head>
@@ -11,14 +11,15 @@
     <p class="disclaimer">
       This is not a real NPS website. It is an educational exercise. If you
       landed here by accident, to find the real website visit
-      <a href="parkUrl">[park name]</a>
+      <a href="https://www.nps.gov/yell/index.htm" target="_blank"
+        >Yellowstone</a
+      >.
     </p>
+
     <div class="skip-links" aria-label="short-cut links" role="navigation">
       <ul>
         <li>
-          <a
-            href="#global-nav-toggle"
-            aria-label="Skip to global NPS navigation"
+          <a href="#global-nav-toggle" aria-label="Skip to global NPS navigation"
             >Skip to global NPS navigation</a
           >
         </li>
@@ -33,20 +34,21 @@
           >
         </li>
         <li>
-          <a
-            href="#park-footer"
-            aria-label="Skip to this park information section"
+          <a href="#park-footer" aria-label="Skip to this park information section"
             >Skip to this park information section</a
           >
         </li>
       </ul>
     </div>
+
     <header>
+      <!-- Global Header -->
       <section class="global-header">
-        <a href="index.html" class="site-title"
-          ><span class="logo" role="presentation"></span>
-          <span>National Park Service</span></a
-        >
+        <a href="index.html" class="site-title">
+          <span class="logo" role="presentation"></span>
+          <span>National Park Service</span>
+        </a>
+
         <div class="global-header__right">
           <a class="search-icon" href="#park-footer">
             <svg class="icon">
@@ -61,6 +63,7 @@
             <span class="visually-hidden">Open</span> Menu
           </button>
         </div>
+
         <nav class="global-nav">
           <h2 class="global-nav__section-heading">Explore this Park</h2>
           <ul class="global-nav__list">
@@ -68,9 +71,9 @@
               <div class="global-nav__split-button">
                 <a href="#">Plan Your Visit</a>
                 <button class="global-nav__split-button__toggle">
-                  <span class="visually-hidden"
-                    >Toggle submenu for Plan Your Visit</span
-                  >
+                  <span class="visually-hidden">
+                    Toggle submenu for Plan Your Visit
+                  </span>
                   <svg class="icon" role="presentation" focusable="false">
                     <use xlink:href="/images/sprite.symbol.svg#arrow"></use>
                   </svg>
@@ -80,7 +83,10 @@
           </ul>
         </nav>
       </section>
+
+      <!-- Park Header -->
       <section id="park-header">
+        <h1 class="park-title">Yellowstone National Park</h1>
         <a href="#">
           <span>Info</span>
           <svg class="icon" role="presentation" focusable="false">
@@ -92,6 +98,7 @@
         </svg>
       </section>
     </header>
+
     <main id="main"></main>
     <footer id="park-footer"></footer>
   </body>
