--- a/src/index.html
+++ b/src/index.html
@@ -8,39 +8,23 @@
     <script type="module" src="js/main.js"></script>
   </head>
   <body>
+    <!-- Disclaimer -->
     <p class="disclaimer">
-      This is not a real NPS website. It is an educational exercise. If you
-      landed here by accident, to find the real website visit
-      <a href="https://www.nps.gov/yell/index.htm" target="_blank"
-        >Yellowstone</a
-      >.
+      This is not a real NPS website. If you landed here by accident, visit
+      <a href="https://www.nps.gov/yell/index.htm">Yellowstone</a>
     </p>
 
+    <!-- Skip links for accessibility -->
     <div class="skip-links" aria-label="short-cut links" role="navigation">
       <ul>
-        <li>
-          <a href="#global-nav-toggle" aria-label="Skip to global NPS navigation"
-            >Skip to global NPS navigation</a
-          >
-        </li>
-        <li>
-          <a href="#local-nav" aria-label="Skip to this park navigation"
-            >Skip to this park navigation</a
-          >
-        </li>
-        <li>
-          <a href="#main" aria-label="Skip to the main content"
-            >Skip to the main content</a
-          >
-        </li>
-        <li>
-          <a href="#park-footer" aria-label="Skip to this park information section"
-            >Skip to this park information section</a
-          >
-        </li>
+        <li><a href="#global-nav-toggle" aria-label="Skip to global NPS navigation">Skip to global NPS navigation</a></li>
+        <li><a href="#park-header" aria-label="Skip to this park navigation">Skip to this park navigation</a></li>
+        <li><a href="#main" aria-label="Skip to the main content">Skip to the main content</a></li>
+        <li><a href="#park-footer" aria-label="Skip to this park information section">Skip to this park information section</a></li>
       </ul>
     </div>
 
+    <!-- Header -->
     <header>
       <!-- Global Header -->
       <section class="global-header">
@@ -48,7 +32,6 @@
           <span class="logo" role="presentation"></span>
           <span>National Park Service</span>
         </a>
-
         <div class="global-header__right">
           <a class="search-icon" href="#park-footer">
             <svg class="icon">
@@ -63,7 +46,6 @@
             <span class="visually-hidden">Open</span> Menu
           </button>
         </div>
-
         <nav class="global-nav">
           <h2 class="global-nav__section-heading">Explore this Park</h2>
           <ul class="global-nav__list">
@@ -71,9 +53,7 @@
               <div class="global-nav__split-button">
                 <a href="#">Plan Your Visit</a>
                 <button class="global-nav__split-button__toggle">
-                  <span class="visually-hidden">
-                    Toggle submenu for Plan Your Visit
-                  </span>
+                  <span class="visually-hidden">Toggle submenu for Plan Your Visit</span>
                   <svg class="icon" role="presentation" focusable="false">
                     <use xlink:href="/images/sprite.symbol.svg#arrow"></use>
                   </svg>
@@ -86,20 +66,24 @@
 
       <!-- Park Header -->
       <section id="park-header">
-        <h1 class="park-title">Yellowstone National Park</h1>
-        <a href="#">
-          <span>Info</span>
-          <svg class="icon" role="presentation" focusable="false">
-            <use xlink:href="/images/sprite.symbol.svg#info"></use>
-          </svg>
-        </a>
-        <svg class="icon" role="presentation" focusable="false">
-          <use xlink:href="/images/sprite.symbol.svg#alert"></use>
-        </svg>
+        <div class="hero-banner">
+          <img src="" alt="" />
+          <div class="hero-banner__content">
+            <!-- This will be filled dynamically by JS -->
+          </div>
+        </div>
+        <nav class="park-nav">
+          <ul>
+            <!-- This will be filled dynamically by JS -->
+          </ul>
+        </nav>
       </section>
     </header>
 
+    <!-- Main content -->
     <main id="main"></main>
+
+    <!-- Footer -->
     <footer id="park-footer"></footer>
   </body>
 </html>
